kubernetes/stellar-frontline/03-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: default
  name: ingressroute-stellar-frontline

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`stellar-frontline.calfur.dev`)
      kind: Rule
      services:
        - name: stellar-frontline
          port: 80
  tls:
    certResolver: myresolver
